plugins {
    id 'com.android.application'
}

android {
    namespace 'io.github.anonymous.pepper_realtime'
    compileSdk 35

    defaultConfig {
        applicationId "io.github.anonymous.pepper_realtime"
        minSdk 23
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        
        // Load API keys from local.properties
        Properties localProps = new Properties()
        try {
            localProps.load(new FileInputStream(rootProject.file("local.properties")))
        } catch (Exception e) {
            // local.properties doesn't exist - use empty values
            // This allows the app to build and run, showing setup messages for missing keys
            logger.warn("local.properties not found. Some features will require API key configuration.")
        }
        
        // Core API keys (required for basic functionality)
        buildConfigField "String", "AZURE_OPENAI_KEY", "\"${localProps.getProperty('AZURE_OPENAI_KEY', '')}\""
        buildConfigField "String", "AZURE_OPENAI_ENDPOINT", "\"${localProps.getProperty('AZURE_OPENAI_ENDPOINT', '')}\""
        buildConfigField "String", "OPENAI_API_KEY", "\"${localProps.getProperty('OPENAI_API_KEY', '')}\""
        buildConfigField "String", "AZURE_SPEECH_KEY", "\"${localProps.getProperty('AZURE_SPEECH_KEY', '')}\""
        buildConfigField "String", "AZURE_SPEECH_REGION", "\"${localProps.getProperty('AZURE_SPEECH_REGION', 'switzerlandnorth')}\""
        
        // Optional API keys (enable additional features)
        buildConfigField "String", "GROQ_API_KEY", "\"${localProps.getProperty('GROQ_API_KEY', '')}\""
        buildConfigField "String", "TAVILY_API_KEY", "\"${localProps.getProperty('TAVILY_API_KEY', '')}\""
        buildConfigField "String", "OPENWEATHER_API_KEY", "\"${localProps.getProperty('OPENWEATHER_API_KEY', '')}\""
        buildConfigField "String", "AZURE_FACE_API_KEY", "\"${localProps.getProperty('AZURE_FACE_API_KEY', '')}\""
        buildConfigField "String", "AZURE_FACE_ENDPOINT", "\"${localProps.getProperty('AZURE_FACE_ENDPOINT', '')}\""

        // Pepper head SSH password (for SSH testing from tablet)
        buildConfigField "String", "PEPPER_SSH_PASSWORD", "\"${localProps.getProperty('PEPPER_SSH_PASSWORD', '')}\""
        
        // Automatically include all API keys from local.properties that end with _API_KEY
        localProps.each { key, value ->
            if (key.toString().endsWith("_API_KEY") && 
                !["OPENAI_API_KEY", "GROQ_API_KEY", "TAVILY_API_KEY", "OPENWEATHER_API_KEY"].contains(key.toString())) {
                buildConfigField "String", key.toString(), "\"${value}\""
                logger.info("Auto-registered API key: ${key}")
            }
        }
    }

    flavorDimensions "mode"
    productFlavors {
        pepper {
            dimension "mode"
            applicationIdSuffix ".pepper"
            versionNameSuffix "-pepper"
        }
        standalone {
            dimension "mode"
            applicationIdSuffix ".standalone"
            versionNameSuffix "-standalone"
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    packagingOptions {
        exclude 'META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version'
        // Add additional exclude rules as needed if new errors occur
    }

    buildFeatures {
        buildConfig true
    }
}

dependencies {

    // Pepper SDK - ONLY FOR PEPPER FLAVOR
    pepperImplementation 'com.aldebaran:qisdk:1.7.5'
    pepperImplementation 'com.aldebaran:qisdk-design:1.7.5'

    // libqi Java bindings for direct NAOqi session access (remote services/events) - ONLY FOR PEPPER
    pepperImplementation 'com.aldebaran:libqi-java-android:2.9.0'

    // Azure Speech SDK (1.38.0 is the latest version compatible with minSdk 23)
    implementation 'com.microsoft.cognitiveservices.speech:client-sdk:1.38.0'

    // Networking
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Modern AndroidX libraries (compatible with SDK 35)
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.activity:activity:1.9.0'
    implementation 'androidx.core:core-ktx:1.13.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'

    // SSH client for Android (locked to 0.37.0 due to minSdk 23 compatibility)
    implementation 'com.hierynomus:sshj:0.37.0'


    // Test dependencies
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}
